Fixing responsiveness on mobile

--- a/style2.css
+++ b/style2.css
@@ -11,9 +11,8 @@ body, html {
 .wrapper {
     display: grid;
     grid-gap: 40px;
-    margin-left: 5%;
-    margin-right: 5%;
-    grid-template-columns: repeat(auto-fill, minmax(350px,450px));
+    margin: 0% 5% 5% 5%;
+    grid-template-columns: repeat(auto-fill, 450px);
     justify-content: center;
 }
 
@@ -22,15 +21,11 @@ body, html {
     animation-delay: 0.5s;
 }
 
-
-
 h1{
     color: #FFD705;
     font-size: 4rem;
     text-shadow: 0px 0px 1rem black;
 }
-
-
 
 .buffer {
     width: 135.44px;
@@ -74,7 +69,7 @@ img {
 
 .box {
     height: 350px;
-    width: 100%; 
+    
 }
 
 /* Responsive properties for when the screen becomes smaller than 600px */
@@ -84,8 +79,13 @@ img {
     }
 
     .box {
-        height: 250px;
-        width: 350px;
+        height: 200px;
+        
+    }
+
+    .wrapper{
+        margin: 0px;
+        grid-template-columns: repeat(auto-fill, 300px);
     }
 }
 
